--- a/index.html
+++ b/index.html
@@ -1,1 +1,70 @@
-"Hello World" 
+<html>
+<head>
+	<title>Mark Wiggans</title>
+	<link rel="icon" href="favicon.ico">
+	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+</head>
+<body>
+
+ <div class="site-wrapper">
+
+      <div class="site-wrapper-inner">
+
+        <div class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand"><image src="web_hi_res_512.png" width=64>Mark Wiggans</h3>
+              <!--<nav>
+                <ul class="nav masthead-nav">
+                  <li class="active"><a href="#">Home</a></li>
+                  <li><a href="#">Features</a></li>
+                  <li><a href="#">Contact</a></li>
+                </ul>
+              </nav>-->
+            </div>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">Dem <a href="https://s-media-cache-ak0.pinimg.com/originals/88/5d/21/885d212bedbb2bb0b5e18fe9cad63b13.jpg" style="underline:none">links</a>.</h1>
+			<ul class="list-inline intro-social-buttons">
+				<li><a target="_blank" href="https://github.com/mmw125" class="btn btn-default btn-large"><i class="fa fa-github fa-fw"></i><span class="network-name">Github</span></a></li>
+				<li><a target="_blank" href="https://www.linkedin.com/in/mark-wiggans-42419358/" class="btn btn-default btn-large"><i class="fa fa-linkedin fa-fw"></i><span class="network-name">LinkedIn</span></a></li>
+				<li><a target="_blank" href="http://steamcommunity.com/id/mmw125/" class="btn btn-default btn-large"><i class="fa fa-steam fa-fw"></i><span class="network-name">Steam</span></a></li>
+			</ul>
+          </div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>Based on Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-git.min.js"></script>
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
+		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
+		crossorigin="anonymous">
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" 
+		href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" 
+		integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" 
+		crossorigin="anonymous">
+
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" 
+		integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" 
+		crossorigin="anonymous"></script>
+	<link href="cover.css" rel="stylesheet">
+  </body>
+  </html>
