--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Dem <a href="https://s-media-cache-ak0.pinimg.com/originals/88/5d/21/885d212bedbb2bb0b5e18fe9cad63b13.jpg" style="underline:none">links</a>.</h1>
+            <h1 class="cover-heading">dem <a href="https://s-media-cache-ak0.pinimg.com/originals/88/5d/21/885d212bedbb2bb0b5e18fe9cad63b13.jpg">links</a></h1>
 			<ul class="list-inline intro-social-buttons">
 				<li><a target="_blank" href="https://github.com/mmw125" class="btn btn-default btn-large"><i class="fa fa-github fa-fw"></i><span class="network-name">Github</span></a></li>
 				<li><a target="_blank" href="https://www.linkedin.com/in/mark-wiggans-42419358/" class="btn btn-default btn-large"><i class="fa fa-linkedin fa-fw"></i><span class="network-name">LinkedIn</span></a></li>
@@ -37,6 +37,7 @@
           <div class="mastfoot">
             <div class="inner">
               <p>Based on Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+			  <p><a href="https://github.com/mmw125/mmw125.github.io">this</a></p>
             </div>
           </div>
 
