--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="mastfoot">
             <div class="inner">
               <p>Based on Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-			  <p><a href="https://github.com/mmw125/mmw125.github.io">this</a></p>
+			  <p><a href="https://github.com/mmw125/mmw125.github.io">this</a>&nbsp|&nbsp<a href="https://mmw125.github.io">self</a></p>
             </div>
           </div>
 
