--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand"><image src="web_hi_res_512.png" width=64>Mark Wiggans</h3>
+              <h3 class="masthead-brand"><image src="img/web_hi_res_512.png" width=64>Mark Wiggans</h3>
               <!--<nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
@@ -25,7 +25,7 @@
             </div>
           </div>
 
-          <div class="inner cover">
+          <div class="inner cover" id="center">
             <h1 class="cover-heading">dem <a href="https://s-media-cache-ak0.pinimg.com/originals/88/5d/21/885d212bedbb2bb0b5e18fe9cad63b13.jpg">links</a></h1>
 			<ul class="list-inline intro-social-buttons">
 				<li><a target="_blank" href="https://github.com/mmw125" class="btn btn-default btn-large"><i class="fa fa-github fa-fw"></i><span class="network-name">Github</span></a></li>
@@ -37,14 +37,11 @@
           <div class="mastfoot">
             <div class="inner">
               <p>Based on Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-			  <p><a href="https://github.com/mmw125/mmw125.github.io">this</a>&nbsp|&nbsp<a href="https://mmw125.github.io">self</a></p>
+			  <p><a href="https://github.com/mmw125/mmw125.github.io">src</a></p>
             </div>
           </div>
-
         </div>
-
       </div>
-
     </div>
 
     <!-- Bootstrap core JavaScript
