--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>Mark Wiggans</title>
-	<link rel="icon" href="favicon.ico">
+	<link rel="icon" href="img/favicon.ico">
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -28,9 +28,10 @@
           <div class="inner cover" id="center">
             <h1 class="cover-heading">Links</h1>
 			<ul class="list-inline intro-social-buttons">
-				<li><a target="_blank" href="https://github.com/mmw125" class="btn btn-default btn-large"><i class="fa fa-github fa-fw"></i><span class="network-name">Github</span></a></li>
-				<li><a target="_blank" href="https://www.linkedin.com/in/mark-wiggans-42419358/" class="btn btn-default btn-large"><i class="fa fa-linkedin fa-fw"></i><span class="network-name">LinkedIn</span></a></li>
-				<li><a target="_blank" href="http://steamcommunity.com/id/mmw125/" class="btn btn-default btn-large"><i class="fa fa-steam fa-fw"></i><span class="network-name">Steam</span></a></li>
+				<li><a target="_blank" href="https://github.com/mmw125" class="btn btn-default btn-large"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbspGithub</span></a></li>
+				<li><a target="_blank" href="https://www.linkedin.com/in/mark-wiggans-42419358/" class="btn btn-default btn-large"><i class="fa fa-linkedin fa-fw"></i><span class="network-name">&nbspLinkedIn</span></a></li>
+				<li><a target="_blank" href="mark_wiggans_resume_s.pdf" class="btn btn-default btn-large"><i class="fa fa-file-text"></i><span class="network-name">&nbspResume</span></a></li>
+				<li><a target="_blank" href="http://steamcommunity.com/id/mmw125/" class="btn btn-default btn-large"><i class="fa fa-steam fa-fw" aria-hidden="true"></i><span class="network-name">&nbspSteam</span></a></li>
 			</ul>
           </div>
 
