--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<ul class="list-inline intro-social-buttons">
 				<li><a target="_blank" href="https://github.com/mmw125" class="btn btn-default btn-large"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbspGithub</span></a></li>
 				<li><a target="_blank" href="https://www.linkedin.com/in/mark-wiggans-42419358/" class="btn btn-default btn-large"><i class="fa fa-linkedin fa-fw"></i><span class="network-name">&nbspLinkedIn</span></a></li>
-				<li><a target="_blank" href="mark_wiggans_resume_s.pdf" class="btn btn-default btn-large"><i class="fa fa-file-text"></i><span class="network-name">&nbspResume</span></a></li>
+				<li><a target="_blank" href="https://drive.google.com/file/d/0ByIkx-FmL0RSbDladjcyTW5hQkk/view?usp=sharing" class="btn btn-default btn-large"><i class="fa fa-file-text"></i><span class="network-name">&nbspResume</span></a></li>
 				<li><a target="_blank" href="http://steamcommunity.com/id/mmw125/" class="btn btn-default btn-large"><i class="fa fa-steam fa-fw" aria-hidden="true"></i><span class="network-name">&nbspSteam</span></a></li>
 			</ul>
           </div>
