split links into catergories

--- a/index.html
+++ b/index.html
@@ -15,30 +15,28 @@
           <div class="masthead clearfix">
             <div class="inner">
               <h3 class="masthead-brand"><image src="img/web_hi_res_512.png" width=64>Mark Wiggans</h3>
-              <!--<nav>
-                <ul class="nav masthead-nav">
-                  <li class="active"><a href="#">Home</a></li>
-                  <li><a href="#">Features</a></li>
-                  <li><a href="#">Contact</a></li>
-                </ul>
-              </nav>-->
             </div>
           </div>
 
           <div class="inner cover" id="center">
-            <h1 class="cover-heading">Links</h1>
+            <h1 class="cover-heading">Professional Links</h1>
 			<ul class="list-inline intro-social-buttons">
-				<li><a target="_blank" href="https://github.com/mmw125" class="btn btn-default btn-large"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbspGithub</span></a></li>
-				<li><a target="_blank" href="https://www.linkedin.com/in/mark-wiggans-42419358/" class="btn btn-default btn-large"><i class="fa fa-linkedin fa-fw"></i><span class="network-name">&nbspLinkedIn</span></a></li>
-				<li><a target="_blank" href="https://drive.google.com/file/d/0ByIkx-FmL0RSbDladjcyTW5hQkk/view?usp=sharing" class="btn btn-default btn-large"><i class="fa fa-file-text"></i><span class="network-name">&nbspResume</span></a></li>
-				<li><a target="_blank" href="http://steamcommunity.com/id/mmw125/" class="btn btn-default btn-large"><i class="fa fa-steam fa-fw" aria-hidden="true"></i><span class="network-name">&nbspSteam</span></a></li>
+				<li class="list-inline-item"><a target="_blank" href="https://github.com/mmw125" class="btn btn-default btn-large"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbspGithub</span></a></li>
+				<li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/mark-wiggans-42419358/" class="btn btn-default btn-large"><i class="fa fa-linkedin fa-fw"></i><span class="network-name">&nbspLinkedIn</span></a></li>
+				<li class="list-inline-item"><a target="_blank" href="https://drive.google.com/file/d/0ByIkx-FmL0RSbDladjcyTW5hQkk/view?usp=sharing" class="btn btn-default btn-large"><i class="fa fa-file-text"></i><span class="network-name">&nbspResume</span></a></li>
+			</ul>
+			<br/>
+			<h1 class="cover-heading">Hobby Links</h1>
+			<ul class="list-inline intro-social-buttons">
+				<li class="list-inline-item"><a target="_blank" href="http://steamcommunity.com/id/mmw125/" class="btn btn-default btn-large"><i class="fa fa-steam fa-fw"></i><span class="network-name">&nbspSteam</span></a></li>
+				<li class="list-inline-item"><a target="_blank" href="http://cubetutor.com/viewcube/78987" class="btn btn-default btn-large"><i class="fa fa-cube fa-fw"></i><span class="network-name">&nbspCube</span></a></li>
 			</ul>
           </div>
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Based on Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
-			  <p><a href="https://github.com/mmw125/mmw125.github.io">src</a></p>
+			    <p><a href="https://github.com/mmw125/mmw125.github.io">src</a></p>
+                <p>Based on Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
             </div>
           </div>
         </div>
@@ -50,9 +48,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://code.jquery.com/jquery-git.min.js"></script>
 	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
-		integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-		crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
 
 	<!-- Optional theme -->
 	<link rel="stylesheet" 
