Update cube link

--- a/index.html
+++ b/index.html
@@ -29,14 +29,13 @@
 			<h1 class="cover-heading">Hobby Links</h1>
 			<ul class="list-inline intro-social-buttons">
 				<li class="list-inline-item"><a target="_blank" href="http://steamcommunity.com/id/mmw125/" class="btn btn-default btn-large"><i class="fa fa-steam fa-fw"></i><span class="network-name">&nbspSteam</span></a></li>
-				<li class="list-inline-item"><a target="_blank" href="http://cubetutor.com/viewcube/78987" class="btn btn-default btn-large"><i class="fa fa-cube fa-fw"></i><span class="network-name">&nbspCube</span></a></li>
+				<li class="list-inline-item"><a target="_blank" href="http://cubecobra.com/cube/list/mmw125" class="btn btn-default btn-large"><i class="fa fa-cube fa-fw"></i><span class="network-name">&nbspCube</span></a></li>
 			</ul>
           </div>
 
           <div class="mastfoot">
             <div class="inner">
 			    <p><a href="https://github.com/mmw125/mmw125.github.io">src</a></p>
-                <p>Based on Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
             </div>
           </div>
         </div>
