update resume and cubecobra to https

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<title>Mark Wiggans</title>
 	<link rel="icon" href="img/favicon.ico">
 	<link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="jumpstart.js" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -14,7 +15,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand"><image src="img/web_hi_res_512.png" width=64>Mark Wiggans</h3>
+              <h3 class="masthead-brand"><image src="img/web_hi_res_512.png" width=64>Jumpstart Deck Generator</h3>
             </div>
           </div>
 
@@ -23,13 +24,13 @@
 			<ul class="list-inline intro-social-buttons">
 				<li class="list-inline-item"><a target="_blank" href="https://github.com/mmw125" class="btn btn-default btn-large"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbspGithub</span></a></li>
 				<li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/mark-wiggans-42419358/" class="btn btn-default btn-large"><i class="fa fa-linkedin fa-fw"></i><span class="network-name">&nbspLinkedIn</span></a></li>
-				<li class="list-inline-item"><a target="_blank" href="https://drive.google.com/file/d/0ByIkx-FmL0RSbDladjcyTW5hQkk/view?usp=sharing" class="btn btn-default btn-large"><i class="fa fa-file-text"></i><span class="network-name">&nbspResume</span></a></li>
+				<li class="list-inline-item"><a target="_blank" href="https://drive.google.com/file/d/1AMWbNyo_NpBMTkjSABRmaA7t9sLbB0ha/view?usp=sharing" class="btn btn-default btn-large"><i class="fa fa-file-text"></i><span class="network-name">&nbspResume</span></a></li>
 			</ul>
 			<br/>
 			<h1 class="cover-heading">Hobby Links</h1>
 			<ul class="list-inline intro-social-buttons">
 				<li class="list-inline-item"><a target="_blank" href="http://steamcommunity.com/id/mmw125/" class="btn btn-default btn-large"><i class="fa fa-steam fa-fw"></i><span class="network-name">&nbspSteam</span></a></li>
-				<li class="list-inline-item"><a target="_blank" href="http://cubecobra.com/cube/list/mmw125" class="btn btn-default btn-large"><i class="fa fa-cube fa-fw"></i><span class="network-name">&nbspCube</span></a></li>
+				<li class="list-inline-item"><a target="_blank" href="https://cubecobra.com/cube/list/mmw125" class="btn btn-default btn-large"><i class="fa fa-cube fa-fw"></i><span class="network-name">&nbspCube</span></a></li>
 			</ul>
           </div>
 
