fix page header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand"><image src="img/web_hi_res_512.png" width=64>Jumpstart Deck Generator</h3>
+              <h3 class="masthead-brand"><image src="img/web_hi_res_512.png" width=64>Mark Wiggans</h3>
             </div>
           </div>
 
