add resume file

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<ul class="list-inline intro-social-buttons">
 				<li class="list-inline-item"><a target="_blank" href="https://github.com/mmw125" class="btn btn-default btn-large"><i class="fa fa-github fa-fw"></i><span class="network-name">&nbspGithub</span></a></li>
 				<li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/mark-wiggans-42419358/" class="btn btn-default btn-large"><i class="fa fa-linkedin fa-fw"></i><span class="network-name">&nbspLinkedIn</span></a></li>
-				<li class="list-inline-item"><a target="_blank" href="https://drive.google.com/file/d/1AMWbNyo_NpBMTkjSABRmaA7t9sLbB0ha/view?usp=sharing" class="btn btn-default btn-large"><i class="fa fa-file-text"></i><span class="network-name">&nbspResume</span></a></li>
+				<li class="list-inline-item"><a target="_blank" href="mark-wiggans-resume.pdf" class="btn btn-default btn-large"><i class="fa fa-file-text"></i><span class="network-name">&nbspResume</span></a></li>
 			</ul>
 			<br/>
 			<h1 class="cover-heading">Hobby Links</h1>
